2004-03-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* configure.in (AC_HEADER_STDBOOL): Added call to this macro.

	* src/syscfg.h: Rewrite the definition of FALSE, TRUE and TBOOLEAN
	from scratch, this time based on autoconf's recommendations.  The
	previous version collided with a "#define bool _Bool" found
	somewhere deep in the Mac OS X system headers.

	
	
2004-03-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.c (t_timelevel): Start enum values at 1, to avoid
	wrap-around of expression TIMELEVEL_SECONDS - 1.
	(make_auto_time_minitics): Fine-tune thresholds and generate tick
	step sizes to get more sensible minor tick steps.
	(quantize_time_tics): Only set timelevel[axis] to a higher value
	if the tic step is at least one unit long.
	(time_tic_just): Remove superfluous update of local variable just
	before exit from function.
	(setup_tics): Handle reverted time/date axes correctly.

2004-03-22  Ethan Merritt  <merritt@u.washington.edu>
	
	* src/term.c src/gplt_x11.c term/gd.trm term/pdf.trm term/x11.trm
	term/dumb.trm term/post.trm: Revamp the implementation of the '@'
	character (phantom box) in enhanced text processing.  This fixes
	bug #906056 "@-aligned string does not work with font change".
	Basically it adds a save/restore position command to the 
	term->enhanced_open() routine, and brackets the @-text with a save
	and restore.  Probably a PostScript guru can beautify my code further.

2004-03-21  Ethan Merritt  <merritt@u.washington.edu>
	
	* term/svg.trm: Add an enhanced text mode for the svg terminal. 
	It's not perfect, but it works well enough to overcome some of the
	text formatting limitations in the svg plain text mode.

2004-03-18  Ethan Merritt  <merritt@u.washington.edu>
	
	* term/dumb.trm: Fix segfault on 'unset output' while in dumb terminal.

2004-03-15  Hans-Bernhard Broeker  <broeker@ac3b07.physik.rwth-aachen.de>

	* src/axis.c (load_range): Un-set 'reverse' option if fixed range